fix: fix image select disabled and file input on safari

--- a/projects/gui/file-uploader/file-uploader.scss
+++ b/projects/gui/file-uploader/file-uploader.scss
@@ -36,7 +36,7 @@
       left: 0;
       width: 100%;
       height: 100%;
-      text-indent: 9999px;
+      opacity: 0;
       cursor: pointer;
     }
 
