--- a/projects/gui/image-select/image-select.scss
+++ b/projects/gui/image-select/image-select.scss
@@ -1,6 +1,6 @@
 %img {
   height: 100%;
-  width: 120px;
+  max-width: 120px;
   object-fit: contain;
   border-radius: 4px;
   background-color: var(--mat-option-hover-state-layer-color);
